--- a/papers/parallelcoordinates.bib
+++ b/papers/parallelcoordinates.bib
@@ -187,6 +187,21 @@
   Timestamp                = {2015.04.08}
 }
 
+@Article{dasgupta2011adaptive,
+  Title                    = {Adaptive privacy-preserving visualization using parallel coordinates},
+  Author                   = {Dasgupta, Aritra and Kosara, Robert},
+  Journal                  = {Visualization and Computer Graphics, IEEE Transactions on},
+  Year                     = {2011},
+  Number                   = {12},
+  Pages                    = {2241--2248},
+  Volume                   = {17},
+
+  File                     = {:Adaptive privacy-preserving visualization using parallel coordinates.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {IEEE},
+  Timestamp                = {2015.04.10}
+}
+
 @Article{ellis2006enabling,
   Title                    = {Enabling automatic clutter reduction in parallel coordinate plots},
   Author                   = {Ellis, Geoffrey and Dix, Alan},
