Section 2 Writing. --ChufanLai

--- a/papers/parallelcoordinates.bib
+++ b/papers/parallelcoordinates.bib
@@ -516,6 +516,16 @@
   Timestamp                = {2015.04.08}
 }
 
+@Book{inselberg2009parallel,
+  Title                    = {Parallel coordinates},
+  Author                   = {Inselberg, Alfred},
+  Publisher                = {Springer},
+  Year                     = {2009},
+
+  Owner                    = {chufanlai},
+  Timestamp                = {2015.04.22}
+}
+
 @Article{inselberg1985plane,
   Title                    = {The plane with parallel coordinates},
   Author                   = {Inselberg, Alfred},
@@ -620,6 +630,21 @@
   File                     = {:Revealing structure within clustered parallel coordinates displays.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.08}
+}
+
+@Article{johansson2009interactive,
+  Title                    = {Interactive dimensionality reduction through user-defined combinations of quality metrics},
+  Author                   = {Johansson, Sara and Johansson, Jimmy},
+  Journal                  = {Visualization and Computer Graphics, IEEE Transactions on},
+  Year                     = {2009},
+  Number                   = {6},
+  Pages                    = {993--1000},
+  Volume                   = {15},
+
+  File                     = {:Interactive Dimensionality Reduction Through User-defined.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {IEEE},
+  Timestamp                = {2015.04.24}
 }
 
 @InProceedings{kandogan2000star,
@@ -933,6 +958,19 @@
   Owner                    = {chufanlai},
   Publisher                = {IEEE},
   Timestamp                = {2015.04.08}
+}
+
+@InProceedings{van2005value,
+  Title                    = {The value of visualization},
+  Author                   = {Van Wijk, Jarke J},
+  Booktitle                = {Visualization, 2005. VIS 05. IEEE},
+  Year                     = {2005},
+  Organization             = {IEEE},
+  Pages                    = {79--86},
+
+  File                     = {:The Value of Visualization.pdf:PDF},
+  Owner                    = {chufanlai},
+  Timestamp                = {2015.04.22}
 }
 
 @Article{viau2010flowvizmenu,
