Bib files added. --ChufanLai

--- a/survey/parallelcoordinates.tex
+++ b/survey/parallelcoordinates.tex
@@ -139,10 +139,10 @@
 
 \subsection{数据}
 \label{subsection:dataBasics}
-假设一个数据集有$m$个样本，每个样本有$n$个维度，则它可以记成一个$m \times n$的矩阵，其中每一行是一个样本，每一列代表一个维度。这样的矩阵又称为数据矩阵（data matrix），是平行坐标所处理的典型高维数据。数据的维度大致分为两种，即连续型（Continuous）维度和类别型（Categorical）维度。而一般的坐标轴只适用于连续型维度，类别型数据需要转换成连续型来表示，但往往会造成感知上的问题（详见~\ref{subsection:perceptionBasics}节）。因此，平行坐标并不适合表现类别型数据。另外，高维信息的产生往往伴随着其他类型的数据，譬如高维时空间数据、高维网络数据、高维流场数据等等。如何拓展平行坐标来表现不同类型的高维数据，也是研究的重点之一。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               
+假设一个数据集有$m$个样本，每个样本有$n$个维度，则它可以记成一个$m \times n$的矩阵，其中每一行是一个样本，每一列代表一个维度。这样的矩阵又称为数据矩阵（data matrix），是平行坐标所处理的典型高维数据。数据的维度大致分为两种，即连续型（Continuous）维度和类别型（Categorical）维度。而一般的坐标轴只适用于连续型维度，类别型数据需要转换成连续型来表示，但往往会造成感知上的问题（详见~\ref{subsection:designBasics}节）。因此，平行坐标并不适合表现类别型数据。另外，高维信息的产生往往伴随着其他类型的数据，譬如高维时空间数据、高维网络数据、高维流场数据等等。如何拓展平行坐标来表现不同类型的高维数据，也是研究的重点之一。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               
 
 \subsection{视图设计}
-\label{basics}
+\label{subsection:designBasics}
 正如第\ref{section:introduction}节所提到，人无法感知高于三维的拓扑关系。而传统的笛卡尔坐标系限定了各坐标轴必须相互垂直，这使得高维的坐标空间极为抽象和难以理解。平行坐标解决这一难题的方法，顾名思义，就是将各个维度的坐标轴平行放置，如图\ref{fig:PC_principle}所示。一个高维数据在各个坐标轴上均有取值，连接各取值点所形成的一条折线，即表达了这个数据。事实上，基于线和点的转化关系，平行坐标和笛卡尔坐标之间有很好的几何对称性，有兴趣的读者可参阅相关文献~\citep{inselberg1985plane}~\citep{inselberg2009parallel}。
 
 \begin{figure}[!htb]
@@ -155,6 +155,7 @@
 和其他高维可视化方法相比，平行坐标有几个突出的优点。首先，由于坐标轴的数量只受限于屏幕的横向分辨率，它相比于散点图矩阵等可以容易容纳更多维度，具有很强的可扩展性。其次，它完整地表达了数据在每个维度上的取值，相比于降维投影、雷达图等具有较低的不确定性和信息损失。最后，平行坐标构造简单、无需自动算法辅助，既方便使用也容易理解。
 
 但相对地，平行坐标也存在一些明显的局限和缺点：
+
 其一，每个数据用一条折线来表示，这会比散点形式占用更多的显示空间。当数据量增大时，视图很容易发生图元堆叠、导致视觉混杂（如图~\ref{fig:PC_clutter}），用户将无法从中得到有用的信息。
 
 \begin{figure}[!htb]
@@ -169,9 +170,11 @@
 \begin{figure}[!htb]
 \centering
 \includegraphics[width=1.0\linewidth]{images/PC_reordering.eps}
-\caption{\label{fig:PC_reordering}不同坐标轴排序对平行坐标的影响，其中上、下图分别为重排序前、后的视图。本图修改自Ferdosi~等人的论文~\citep{ferdosi2011visualizing}~。
+\caption{\label{fig:PC_reordering}不同坐标轴顺序对平行坐标的影响。其中上、下图分别为重排序前、后的视图，可见排序后各个维度的相关性和差异性更为明显。本图修改自Ferdosi~等人的论文~\citep{ferdosi2011visualizing}~。
 }
 \end{figure}
+
+其三，
 
 \subsection{感知}
 \label{subsection:perceptionBasics}
