Bib file revised. --ChufanLai

--- a/papers/PC_AxesOrdering.bib
+++ b/papers/PC_AxesOrdering.bib
@@ -18,6 +18,19 @@
   Timestamp                = {2015.04.08}
 }
 
+@Article{heinrich2012parallel,
+  Title                    = {The parallel coordinates matrix},
+  Author                   = {Heinrich, J and Stasko, J and Weiskopf, D},
+  Journal                  = {EuroVis--Short Papers},
+  Year                     = {2012},
+  Pages                    = {37--41},
+
+  __markedentry            = {[chufanlai:]},
+  File                     = {:The parallel coordinates matrix.pdf:PDF},
+  Owner                    = {chufanlai},
+  Timestamp                = {2015.04.08}
+}
+
 @InProceedings{johansson20053,
   Title                    = {3-dimensional display for clustered multi-relational parallel coordinates},
   Author                   = {Johansson, Jimmy and Cooper, Matthew and Jern, Mikael},
