--- a/survey/parallelcoordinates.tex
+++ b/survey/parallelcoordinates.tex
@@ -124,7 +124,7 @@
 
 然而，相比于其他高维可视化形式，平行坐标的设计也存在种种缺点，譬如展现的信息量较少、容易出现视觉混杂（Visual Clutter)、数据特征不直观等等（详见第\ref{section:impro}节）。针对这些问题，领域内的学者们做了大量的研究工作，并提出了各种方法对平行坐标进行改进和延展。
 
-本文基于已有的一些综述论文~\citep{heinrich2013state}，并结合近年来的最新进展，将对平行坐标方面的研究工作进行比较、总结和展望。在文章的余下部分里：第\ref{section:basics&prob}节介绍了平行坐标的基本原理，并阐述其设计上存在的主要问题；第\ref{section:impro}节就平行坐标的不同部分，回顾了领域学者们为解决前述问题所作出的研究努力；第\ref{section:applications}节则介绍了平行坐标在不同领域内的应用现状；第\ref{section:challenges}节基于已有的研究和应用，探讨了仍然存在的挑战，以展望未来的研究动向和应用前景；最后，第\ref{section:conclusion}节对全文内容进行总结。
+本文基于已有的一些综述论文~\citep{heinrich2013state}~\citep{siirtola2006interacting}，并结合近年来的最新进展，将对平行坐标方面的研究工作进行比较、总结和展望。在文章的余下部分里：第\ref{section:basics&prob}节介绍了平行坐标的基本原理，并阐述其设计上存在的主要问题；第\ref{section:impro}节就平行坐标的不同部分，回顾了领域学者们为解决前述问题所作出的研究努力；第\ref{section:applications}节则介绍了平行坐标在不同领域内的应用现状；第\ref{section:challenges}节基于已有的研究和应用，探讨了仍然存在的挑战，以展望未来的研究动向和应用前景；最后，第\ref{section:conclusion}节对全文内容进行总结。
 
 \section{基本原理及主要问题}
 \label{section:basics&prob}
@@ -156,7 +156,7 @@
 
 但相对地，平行坐标也存在一些明显的局限和缺点：
 
-其一，每个数据用一条折线来表示，这会比散点形式占用更多的显示空间。当数据量增大时，视图很容易发生图元堆叠、导致视觉混杂（如图~\ref{fig:PC_clutter}），用户将无法从中得到有用的信息。
+其一，每个数据用一条折线来表示，这会比散点形式占用更多的显示空间。当数据量增大时，视图很容易发生图元堆叠、导致视觉混杂（如图~\ref{fig:PC_clutter}），用户将无法从中得到有用的信息。因此，平行坐标对数据规模的可扩展性较差。
 
 \begin{figure}[!htb]
 \centering
